--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ a:active {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #0033FF}
 p  {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; font-size: 12px; line-height: 18px} 
 li {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; line-height: 18px}
 dd {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; font-size: 12px; line-height: 18px} 
+dt {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; font-size: 12px; line-height: 18px; font-weight: bold} 
 h1 {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 24px; color: #6689CC; font-weight: bold}
 h2 {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-weight: normal; color: #6689CC}
 h3 {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 16px; font-weight: bold; color: #6689CC}
