--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ address  {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; 
 }
 
 #newscell { 
-	width: 15% ; 
+	width: 110px ; 
 	vertical-align: top;
 }
 
