--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ address  {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; 
 
 #contentcell {
 	vertical-align: top;
+	allign: center;
+	width: 800px ; 
 }
 
 a.button {
