--- a/style.css
+++ b/style.css
@@ -24,18 +24,16 @@ address  {  font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000; 
 	background-position: top left ; 
 	vertical-align: top ;  
 	background-color: #6689CC ; 
-	width: 110px
+	width: 130px ;
 }
 
 #newscell { 
-	width: 110px ; 
+	width: 140px ; 
 	vertical-align: top;
 }
 
 #contentcell {
 	vertical-align: top;
-	allign: center;
-	width: 800px ; 
 }
 
 a.button {
@@ -74,6 +72,11 @@ p.newsitem {
 	border-width: thin;
 	font-size: 11px;
 	background-color: #FFFF66;
+
+
+	display: block;
+	text-decoration: none;
+	margin: 5px auto;
 }
 
 table.topmenu {
