--- a/style.css
+++ b/style.css
@@ -45,10 +45,10 @@ table.main {
 
 td.main {
     /*    border: thin dotted rgb(250,0,255) ; */
-    padding-top:2px;
-    padding-bottom:2px;
-    padding-left:2px;
-    padding-right:2px;
+    padding-top:3px;
+    padding-bottom:3px;
+    padding-left:3px;
+    padding-right:3px;
 }
 
 /* TOP MENU */
@@ -60,27 +60,34 @@ div.topmenu {
 }
 
 table.topmenu {
-    padding: 0px;
     margin: 0px 15px 0px 15px;
     border: 0;
+    border-collapse: collapse;
 }
 
 td.topmenu {
+    padding: 2px 2px 2px 2px;
+}
+
+a.topmenu {
     text-align: center;
     width: 100px;
-    height: 20px;
+    height: 18px;
     font-weight: bold;
     font-size: 14px;
     color: white;
+    display: table-cell;
+    text-decoration: none;
 }
 
-td.topmenu:hover {
+a.topmenu:hover {
      color: #1966AE;
      background-color: white;
-
 }
 
-td.topmenu_active {
+a.topmenu_active {
+     color: #1966AE;
+     background-color: white;
 }
 
 /* NEWS  */
@@ -93,7 +100,6 @@ td.topmenu_active {
 table.news {
     width: 200px;
     vertical-align: top;
-    border-collapse: collapse;
 }
 
 tr.news {
@@ -125,87 +131,59 @@ a.news:hover {
     text-decoration: underline;
 }
 
-/*
-
-table.news {
-    overflow:hidden;
-    padding:0px;
-    margin:0px;
-    font-size:1.1em;
-    width:185px;
-}
-
-div.news_header {
-    background-color: #E5EEF6;
-    width:185px;
-    height: 25px;
-    vertical-align: middle;
-}
-
-h4.news {
-    font-weight: bold;
-    vertical-align: middle;
-    padding-left: 10px ;
-    border: thin dotted rgb(250,0,255) ;
-    height: 25px;
-
-}
-
-li.news {
-    clear:both;
-    cursor:pointer;
-    display:block;
-    line-height:15px;
-    margin:0px;
-    padding:0px;
-    border-bottom: 1px solid #DFDFDF;
-
-}
-
-a.news {
-    color:#003B73;
-    display:block;
-    font-family:Arial;
-    margin:0px;
-    padding:0px 15px 0px 0px;
-}
-
-*/
-
-
 /* MENU */
 
-ul.menu {
-    overflow:hidden;
-    padding:0px;
-    margin:0px;
-    font-size:1.1em;
-    width:185px;
+#menu_cell {
+    vertical-align: top;
+    padding-top: 3px;
 }
 
-li.menu {
-    clear:both;
-    cursor:pointer;
-    display:block;
-    line-height:15px;
-    margin:0px;
-    padding:0px;
+table.menu {
+    width: 200px;
+    border-collapse: collapse;
 }
 
-ul.menu {
-    padding-left:0px;
-    margin-left:0px;
+td.menu {
+    border-top: 1px solid #99BBDB;
+    border-bottom: 1px solid #99BBDB;
+    padding: 0px 0px 0px 0px;
 }
+
+td.menu:hover {
+}
+
+span.menu {
+     vertical-align: middle;
+ }
 
 a.menu {
     color:#003B73;
-    display:block;
-    font-family:Arial;
-    margin:0px;
-    padding:0px 15px 0px 0px;
+    text-decoration: none;
+    height: 30px;
+    width: 200px;
+    display: table-cell;
+    vertical-align: middle;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-left: 10px;
 }
 
-a.menu-active {
-    color: #c00;
+a.level1 {
+    padding-left: 10px;
+    font-weight: bold;
+}
+
+a.level2 {
+    padding-left: 20px;
+}
+
+a.menu_active {
+    background-color: #E5EEF6;
+}
+
+a.menu:hover {
+    color: #CC0000;
+    text-decoration: underline;
+    background-color: #E5EEF6;
 }
 
