fixed create pages script to put bibtex stuff in "generated" dir instead of root started a layout dir

--- a/layout/index-result.html
+++ b/layout/index-result.html
@@ -56,6 +56,7 @@
 
 	    <tr>
 		<td class="main">
+		    <img src="images/balloons-text.png" alt="Banner">
 		    <!-- CONTENT -->
 		    <?php include ("content/index.html"); ?> 
 		</td>
