--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ a:hover {
 
 img { border: none }
 
-img.centered {
-    align: center;
+p.centered {
+    text-align: center;
 }
 
 /* MAIN TABLE */
@@ -44,11 +44,12 @@ table.main {
 }
 
 td.main {
-    /*    border: thin dotted rgb(250,0,255) ; */
+    border: thin dotted rgb(250,0,255) ;
     padding-top:3px;
     padding-bottom:3px;
     padding-left:3px;
     padding-right:3px;
+    vertical-align: top;
 }
 
 /* TOP MENU */
@@ -57,7 +58,7 @@ div.topmenu {
 /*    background-color: #1966AE;*/
     background-color: #6699C9;
     color: #003B73;
-    width: 950px;
+    width: 955px;
 }
 
 table.topmenu {
@@ -94,19 +95,11 @@ a.topmenu_active {
 
 /* NEWS  */
 
-
-#news_cell {
-    vertical-align: top;
-}
-
 table.news {
     width: 200px;
     vertical-align: top;
     border-collapse: collapse;
 }
-
-tr.news {
-	  }
 
 th.news {
     font-weight: bold;
@@ -136,14 +129,11 @@ a.news:hover {
 
 /* MENU */
 
-#menu_cell {
-    vertical-align: top;
-    padding-top: 3px;
-}
-
 table.menu {
     width: 200px;
-    border-collapse: collapse;
+    vertical-align: top;
+    border-collapse: collapse; 
+    margin-top: 1px;
 }
 
 td.menu {
@@ -151,13 +141,6 @@ td.menu {
     border-bottom: 1px solid #99BBDB;
     padding: 0px 0px 0px 0px;
 }
-
-td.menu:hover {
-}
-
-span.menu {
-     vertical-align: middle;
- }
 
 a.menu {
     color:#003B73;
@@ -171,13 +154,17 @@ a.menu {
     padding-left: 10px;
 }
 
-a.level1 {
+a.level0 {
     padding-left: 10px;
     font-weight: bold;
 }
 
-a.level2 {
+a.level1 {
     padding-left: 20px;
+}
+
+a.level2 {
+    padding-left: 30px;
 }
 
 a.menu_active {
