fixed layout for downloads page

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5 {
 }
 
 #content_cell {
-    width: 600px;
+    width: 700px;
 }
 
 a {
@@ -35,6 +35,16 @@ img.floating {
     padding: 10px 10px 10px 10px ;
 }
 
+img.floating-left {
+    float: left ;
+    padding: 0px 0px 0px 0px ;
+}
+
+img.floating-right {
+    float: right ;
+    padding: 0px 0px 0px 0px ;
+}
+
 img.banner {
     width: 591px;
 }
@@ -56,7 +66,7 @@ table.main {
 }
 
 td.main {
-/*    border: thin dotted rgb(250,0,255) ; */
+    /* border: thin dotted rgb(250,0,255) ; */
     padding-top:3px;
     padding-bottom:3px;
     padding-left:3px;
@@ -70,13 +80,14 @@ div.topmenu {
 /*    background-color: #1966AE;*/
     background-color: #6699C9;
     color: #003B73;
-    width: 800px;
+    width: 100%;
 }
 
 table.topmenu {
     margin: 0px 15px 0px 15px;
     border: 0;
     border-collapse: collapse;
+    width: 770px;
 }
 
 td.topmenu {
