--- a/style.css
+++ b/style.css
@@ -84,7 +84,10 @@ div.topmenu {
 }
 
 table.topmenu {
-    margin: 0px 15px 0px 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
     border: 0;
     border-collapse: collapse;
     width: 770px;
