--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
-/*   background-color: #0055A5 ;  */
-    background-color: #666666 ; 
+/*   background-color: #0055A5 ; VU-blue */
+/*    background-color: #666666 ; gray */
+/*    background-color: #38610B; light green */
+    background-color: #243B0B; /* dark green */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     color: #000000;
@@ -8,7 +10,8 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-    color: #003B73;
+/*    color: #003B73; */
+    color: #1B2A0A;
 }
 
 #content_cell {
@@ -16,7 +19,8 @@ h1, h2, h3, h4, h5 {
 }
 
 a {
-    color: #1966AE;
+/*    color: #1966AE;*/
+    color: #38610B;
     text-decoration: underline;
 }
 
@@ -82,7 +86,8 @@ td.main {
 
 div.topmenu {
 /*    background-color: #6699C9; */
-    background-color: #999999; 
+/*    background-color: #999999; */
+    background-color: #38610B;
     color: #003B73;
     width: 100%;
 }
@@ -116,13 +121,15 @@ a.topmenu {
 }
 
 a.topmenu:hover {
-     background-color: #E5EEF6;
+/*     background-color: #E5EEF6;*/
+     background-color: #E0F8E0;
      color: #CC0000;
      text-decoration: underline;
 }
 
 a.topmenu_active {
-     background-color: #E5EEF6;
+/*     background-color: #E5EEF6;*/
+     background-color: #E0F8E0;
      color: #CC0000;
 }
 
@@ -154,12 +161,13 @@ td.news {
     border-left: none;
     border-right: none;
     border-top: none;
-    border-bottom: 1px solid #99BBDB;
+/*    border-bottom: 1px solid #99BBDB;*/
+    border-bottom: 1px solid #38610B;
     padding: 7px 10px 7px 10px;
 }
 
 a.news {
-    color:#003B73;
+/*    color:#003B73;*/
     text-decoration: none;
 }
 
@@ -182,13 +190,15 @@ table.menu {
 td.menu {
     border-left: none;
     border-right: none;
-    border-top: 1px solid #99BBDB;
-    border-bottom: 1px solid #99BBDB;
+    border-bottom: 1px solid #38610B;
+    border-top: 1px solid #38610B;
+/*    border-top: 1px solid #99BBDB;*/
+/*    border-bottom: 1px solid #99BBDB;*/
     padding: 0px 0px 0px 0px;
 }
 
 a.menu {
-    color:#003B73;
+/*    color:#003B73;*/
     text-decoration: none;
     height: 30px;
     width: 200px;
@@ -214,14 +224,15 @@ a.level2 {
 }
 
 a.menu_active {
-    background-color: #E5EEF6;
-    color: #CC0000;
+     background-color: #E0F8E0;
+     color: #CC0000;
 }
 
 a.menu:hover {
     color: #CC0000;
     text-decoration: underline;
-    background-color: #E5EEF6;
+/*    background-color: #E5EEF6;*/
+    background-color: #E0F8E0;
 }
 
 
