--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
 /*   background-color: #0055A5 ; VU-blue */
 /*    background-color: #666666 ; gray */
 /*    background-color: #38610B; light green */
-    background-color: #243B0B; /* dark green */
+/*    background-color: #243B0B;  dark green */
+    background-color: #4B8A08;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     color: #000000;
@@ -87,7 +88,8 @@ td.main {
 div.topmenu {
 /*    background-color: #6699C9; */
 /*    background-color: #999999; */
-    background-color: #38610B;
+/*    background-color: #38610B; */
+    background-color: #4B8A08;
     color: #003B73;
     width: 100%;
 }
